# merygoround

./: .gitignore
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9fb0502f52e5_.py  a1b2c3d4e5f6_add_reward_value_to_chores.py  b2c3d4e5f6a7_kanban_bucket.py  c3d4e5f6a7b8_bucket_kind_discriminator.py  d4e5f6a7b8c9_per_device_notifications.py
backend/src/merygoround/api/: config.py  main.py  middleware.py
backend/src/merygoround/api/v1/: adult_bucket.py  dashboard.py  notifications.py  router.py  wheel.py
backend/src/merygoround/application/adult_bucket/: commands.py  dtos.py  queries.py
backend/src/merygoround/application/chores/: commands.py  dtos.py  queries.py
backend/src/merygoround/application/dashboard/: dtos.py  queries.py
backend/src/merygoround/application/notification/: commands.py  dtos.py  queries.py
backend/src/merygoround/application/shared/: timezone.py
backend/src/merygoround/application/wheel/: commands.py  dtos.py  queries.py
backend/src/merygoround/domain/adult_bucket/: entities.py  exceptions.py  repository.py  services.py
backend/src/merygoround/domain/chores/: entities.py  value_objects.py
backend/src/merygoround/domain/notification/: entities.py  repository.py
backend/src/merygoround/domain/shared/: value_objects.py
backend/src/merygoround/domain/wheel/: entities.py  (+2 more)
backend/tests/e2e/: test_bucket_api.py  test_dashboard_api.py  test_wheel_api.py
backend/tests/unit/application/: test_wheel_commands.py  test_wheel_queries.py
backend/tests/unit/domain/: test_bucket_draw_service.py
(+56 files in other folders)
